# CoverLetterGenerator

./: .env.example  .gitignore  README.md  debug_llm_issues.py  demo.py  demo_resume_parsing.py  pyproject.toml  requirements.txt  setup.py  test_resume_parsing.py
cover_letter_generator/: __init__.py  agent.py  cli.py  config.py  llm.py  tools.py
examples/: basic_usage.py
output/: .gitkeep
templates/: cover_letter_template.txt
tests/: test_agent.py
